--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -18,4 +18,8 @@
     <string name="name">Name</string>
     <string name="already">Already a member? Login</string>
     <string name="re_pwd">Re-enter Password</string>
+    <string name="forgot">Forgot Password?</string>
+    <string name="current_pwd">Current Password</string>
+    <string name="new_pwd">New Password</string>
+    <string name="confirm_pwd">Confirm Password</string>
 </resources>
