--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="current_pwd">Current Password</string>
     <string name="new_pwd">New Password</string>
     <string name="confirm_pwd">Confirm Password</string>
+    <string name="msg_loading">Loading...</string>
 </resources>
